kompose/test/test-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-nodeport
spec:
  selector:
    io.kompose.service: us-web-fe
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
